fix(staking): port overflow ui fixes from https://github.com/input-output-hk/lace/pull/53/files

--- a/packages/staking/src/features/browse-pools/stake-pools-table/StakePoolItemBrowser/StakePoolItemBrowser.module.scss
+++ b/packages/staking/src/features/browse-pools/stake-pools-table/StakePoolItemBrowser/StakePoolItemBrowser.module.scss
@@ -93,6 +93,12 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+
+      padding-right: size_unit(2);
+
+      @media (max-width: 1024px) {
+       max-width: 160px;
+      }
     }
     p {
       display: block;
